submission OK | train,val split / hyperparameter tuning / early_stop / tensorboard

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if torch.cuda.is_available():\n",
     "    device = 'cuda:0'\n",
@@ -42,20 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cuda', index=0)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# VGA torch 호환성 체크.\n",
     "\n",
@@ -73,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,117 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>topic_idx</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>인천→핀란드 항공기 결항…휴가철 여행객 분통</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>실리콘밸리 넘어서겠다…구글 15조원 들여 美전역 거점화</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>이란 외무 긴장완화 해결책은 미국이 경제전쟁 멈추는 것</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NYT 클린턴 측근韓기업 특수관계 조명…공과 사 맞물려종합</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>시진핑 트럼프에 중미 무역협상 조속 타결 희망</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45649</th>\n",
-       "      <td>KB금융 미국 IB 스티펠과 제휴…선진국 시장 공략</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45650</th>\n",
-       "      <td>1보 서울시교육청 신종코로나 확산에 개학 연기·휴업 검토</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45651</th>\n",
-       "      <td>게시판 키움증권 2020 키움 영웅전 실전투자대회</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45652</th>\n",
-       "      <td>답변하는 배기동 국립중앙박물관장</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45653</th>\n",
-       "      <td>2020 한국인터넷기자상 시상식 내달 1일 개최…특별상 김성후</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>45654 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    title  topic_idx\n",
-       "0                인천→핀란드 항공기 결항…휴가철 여행객 분통          4\n",
-       "1          실리콘밸리 넘어서겠다…구글 15조원 들여 美전역 거점화          4\n",
-       "2          이란 외무 긴장완화 해결책은 미국이 경제전쟁 멈추는 것          4\n",
-       "3        NYT 클린턴 측근韓기업 특수관계 조명…공과 사 맞물려종합          4\n",
-       "4               시진핑 트럼프에 중미 무역협상 조속 타결 희망          4\n",
-       "...                                   ...        ...\n",
-       "45649        KB금융 미국 IB 스티펠과 제휴…선진국 시장 공략          1\n",
-       "45650     1보 서울시교육청 신종코로나 확산에 개학 연기·휴업 검토          2\n",
-       "45651         게시판 키움증권 2020 키움 영웅전 실전투자대회          1\n",
-       "45652                   답변하는 배기동 국립중앙박물관장          2\n",
-       "45653  2020 한국인터넷기자상 시상식 내달 1일 개최…특별상 김성후          2\n",
-       "\n",
-       "[45654 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data"
    ]
@@ -228,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,27 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'인천→핀란드 항공기 결항…휴가철 여행객 분통'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data['title'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,17 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "143 9152\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "count=0\n",
     "for X, in test_loader:\n",
@@ -400,27 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer.vocab['[PAD]']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,17 +316,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 개선점 1\n",
+    "\n",
+    "output에 softmax 안했는데, 어떤 영향이 있는거지?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Train !\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "CFG = {\n",
-    "    'EPOCHS':10,\n",
+    "    'EPOCHS':20,\n",
     "    'LEARNING_RATE':1e-5,\n",
     "    \"BATCH_SIZE\":64,\n",
     "    'SEED':42\n",
@@ -492,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,17 +358,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training ...:  23%|██▎       | 161/714 [03:47<12:47,  1.39s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import numpy as np\n",
@@ -642,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,6 +501,7 @@
     "            pred = model(X)\n",
     "            preds += pred.cpu().tolist()\n",
     "    \n",
+    "    # 전체 prediction 된 것들을 numpy로 한번에 반환해준다.\n",
     "    return np.array(preds)"
    ]
   },
@@ -669,86 +514,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Inferencing ...: 100%|██████████| 143/143 [00:01<00:00, 84.14it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 4.75264931,  5.54297447,  5.14934444,  5.79129267,  5.07579422,\n",
-       "         5.10341311,  6.21081257],\n",
-       "       [ 1.99309421,  1.37511873,  4.40491819,  3.47603941,  1.2998029 ,\n",
-       "         0.04143048,  2.1309998 ],\n",
-       "       [-7.567873  , -6.24873304, -5.76013327, -5.55805779, -6.64984131,\n",
-       "        -7.18544579, -6.87943459],\n",
-       "       [-7.5162816 , -6.85625982, -6.17888069, -6.01185179, -6.5558691 ,\n",
-       "        -7.92228317, -6.94227695],\n",
-       "       [-7.32835293, -7.20512342, -6.52390194, -6.31426334, -6.47006512,\n",
-       "        -7.28777981, -7.03295183],\n",
-       "       [-7.44616842, -6.97636414, -6.47363663, -6.42121935, -6.54787588,\n",
-       "        -7.47561836, -6.94378901],\n",
-       "       [-7.31083727, -6.91109085, -6.00631571, -6.44271135, -6.55620432,\n",
-       "        -7.17786884, -6.86657715],\n",
-       "       [-7.28689528, -7.11733484, -6.18641472, -6.25295305, -6.55523968,\n",
-       "        -7.58078766, -6.82003736],\n",
-       "       [-7.46962166, -7.14170694, -5.78266525, -6.21785402, -6.64540291,\n",
-       "        -6.91075373, -7.21250248],\n",
-       "       [-7.50062323, -7.03465796, -5.84874153, -6.32377052, -6.4830246 ,\n",
-       "        -7.64556599, -6.92683792],\n",
-       "       [-7.30036783, -7.03143311, -6.59736824, -6.74082279, -6.7029829 ,\n",
-       "        -7.29615402, -7.03591585],\n",
-       "       [-7.2790761 , -7.03703117, -6.5956974 , -6.78026724, -6.71272373,\n",
-       "        -7.25195312, -7.05088043],\n",
-       "       [-7.27301741, -7.05759811, -6.58503485, -6.7761097 , -6.69482803,\n",
-       "        -7.21833181, -7.0872674 ],\n",
-       "       [-7.28031826, -7.08568573, -6.58575773, -6.73575878, -6.64738083,\n",
-       "        -7.2028389 , -7.14246178],\n",
-       "       [-7.26647902, -7.09516621, -6.58914948, -6.67511988, -6.60895729,\n",
-       "        -7.22753239, -7.21235323],\n",
-       "       [-7.23023605, -7.07561302, -6.59714174, -6.65315676, -6.59371424,\n",
-       "        -7.25951862, -7.25471783],\n",
-       "       [-7.17375517, -7.04819107, -6.60180521, -6.68500948, -6.5823164 ,\n",
-       "        -7.29077721, -7.26424742],\n",
-       "       [-7.12545252, -7.02374554, -6.60341597, -6.71377754, -6.5829401 ,\n",
-       "        -7.3124361 , -7.25999165],\n",
-       "       [-7.12426186, -7.00790453, -6.59573555, -6.72561264, -6.58016396,\n",
-       "        -7.3196187 , -7.2510848 ],\n",
-       "       [-7.1847415 , -6.97405243, -6.58082771, -6.71709108, -6.57659435,\n",
-       "        -7.32288933, -7.24815655],\n",
-       "       [-7.25974941, -6.93405533, -6.56699181, -6.67440367, -6.59606934,\n",
-       "        -7.33981085, -7.24663019],\n",
-       "       [-7.29295063, -6.92344522, -6.57644844, -6.62499762, -6.63852882,\n",
-       "        -7.35823011, -7.23084545],\n",
-       "       [-7.27442503, -6.93656397, -6.59818077, -6.60700655, -6.68502903,\n",
-       "        -7.35886669, -7.20220137],\n",
-       "       [-7.26218081, -6.92452192, -6.61142635, -6.60561705, -6.70466805,\n",
-       "        -7.36311913, -7.18527889],\n",
-       "       [-7.2854147 , -6.91570044, -6.59515953, -6.5877552 , -6.6918664 ,\n",
-       "        -7.36946058, -7.18847847],\n",
-       "       [-7.36329317, -6.92685699, -6.56538105, -6.58548403, -6.6283884 ,\n",
-       "        -7.34986734, -7.18504906],\n",
-       "       [-7.45690966, -6.93313456, -6.54707003, -6.58773851, -6.54632473,\n",
-       "        -7.37489319, -7.15178204],\n",
-       "       [-7.49345064, -6.93011618, -6.54761696, -6.60167646, -6.51766491,\n",
-       "        -7.447402  , -7.0703516 ],\n",
-       "       [-7.45892859, -6.95957661, -6.5463047 , -6.62277412, -6.52320433,\n",
-       "        -7.51579142, -6.98837662],\n",
-       "       [-7.37381554, -6.98570919, -6.53893518, -6.67054987, -6.52955341,\n",
-       "        -7.51463795, -6.97459984]])"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO 2: 가장 좋은 모델 ckpt 가져와서 load 해줘야하지만 지금은 대충 train 한거 기억하는거 그대로 가져온다.\n",
     "# 대충 하는중\n",
@@ -756,6 +524,122 @@
     "preds = predict(model, test_loader, device)\n",
     "\n",
     "preds.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('/home/kist/Desktop/JH/DACON_transformer/test_preds', preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test_data output checking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "preds = np.load('/home/kist/Desktop/JH/DACON_transformer/test_preds.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예측 결과, max 해서 label로 반환\n",
+    "\n",
+    "pred_outputs=[]\n",
+    "for i in range(len(preds)):\n",
+    "    pred_outputs.append(np.argmax(preds[i]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  topic  topic_idx\n",
+      "0  IT과학          0\n",
+      "1    경제          1\n",
+      "2    사회          2\n",
+      "3  생활문화          3\n",
+      "4    세계          4\n",
+      "5   스포츠          5\n",
+      "6    정치          6\n",
+      "      index                            title\n",
+      "0     45654       유튜브 내달 2일까지 크리에이터 지원 공간 운영\n",
+      "1     45655          어버이날 맑다가 흐려져…남부지방 옅은 황사\n",
+      "2     45656      내년부터 국가RD 평가 때 논문건수는 반영 않는다\n",
+      "3     45657  김명자 신임 과총 회장 원로와 젊은 과학자 지혜 모을 것\n",
+      "4     45658   회색인간 작가 김동식 양심고백 등 새 소설집 2권 출간\n",
+      "...     ...                              ...\n",
+      "9126  54780     인천 오후 3시35분 대설주의보…눈 3.1cm 쌓여\n",
+      "9127  54781    노래방에서 지인 성추행 외교부 사무관 불구속 입건종합\n",
+      "9128  54782     40년 전 부마항쟁 부산 시위 사진 2점 최초 공개\n",
+      "9129  54783    게시판 아리랑TV 아프리카개발은행 총회 개회식 생중계\n",
+      "9130  54784  유영민 과기장관 강소특구는 지역 혁신의 중심…지원책 강구\n",
+      "\n",
+      "[9131 rows x 2 columns]\n",
+      "[0, 3, 5, 2, 3, 3, 5, 3, 4, 4]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n얼추 잘 맞는것같기도 하자. 따로 자세히 보자.\\n'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# output inference\n",
+    "import pandas as pd\n",
+    "\n",
+    "print(pd.read_csv('./dataset/topic_dict.csv'))\n",
+    "print(pd.read_csv('./dataset/test_data.csv'))\n",
+    "print(pred_outputs[:10])\n",
+    "\"\"\"\n",
+    "얼추 잘 맞는것같기도 하자. 따로 자세히 보자.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "sample_sub = pd.read_csv('./dataset/sample_submission.csv')\n",
+    "real_sub = pd.DataFrame(sample_sub['index'])\n",
+    "\n",
+    "real_sub['topic_idx'] = pred_outputs\n",
+    "\n",
+    "\"\"\"\n",
+    "Q. 혹시 test dataset에서 'shuffle=False' 하면 순서대로 반영되는게 맞는건가?\n",
+    "\"\"\"\n",
+    "real_sub.to_csv('first_submission_TransformerEncModel.csv', index=False)"
    ]
   }
  ],
